localization/v3.0.x/site/id/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
Selamat datang di Milvus Docs!</h1></p>
<p><h2 class="sub-title">
Di sini Anda akan mempelajari tentang apa itu Milvus, dan bagaimana cara menginstal, menggunakan, dan menggunakan Milvus untuk membangun aplikasi sesuai dengan kebutuhan bisnis Anda.</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">Coba Managed Milvus Secara Gratis!</h2>
    <p class="promotion-desc">Zilliz Cloud tidak merepotkan, didukung oleh Milvus dan 10x lebih cepat.</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup?utm_source=partner&utm_medium=referral&utm_campaign=2025-02-24_doc_home_milvus.io">Zilliz Cloud</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">Mulai<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/id/install_standalone-docker.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/id/install_standalone-docker.md"> <p class="link-btn">Instal Milvus</p> </a><p>Pelajari cara menginstal Milvus menggunakan Docker Compose atau Kubernetes.</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/id/quickstart.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/id/quickstart.md"> <p class="link-btn">Mulai Cepat</p> </a><p>Pelajari cara menjalankan Milvus dengan cepat dengan kode sampel.</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">Bootcamp</p> </a><p>
  Pelajari cara membuat aplikasi pencarian kemiripan vektor dengan Milvus.  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">Artikel yang direkomendasikan<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>Menggunakan</p>
<ul>
<li><a href="/docs/id/manage-collections.md">Mengelola Koleksi</a></li>
<li><a href="/docs/id/insert-update-delete.md">Menyisipkan, Menambah, dan Menghapus</a></li>
<li><a href="/docs/id/single-vector-search.md">Pencarian Vektor Tunggal</a></li>
<li><a href="/docs/id/multi-vector-search.md">Pencarian Hibrida</a></li>
<li><a href="/docs/id/get-and-scalar-query.md">Dapatkan &amp; Kueri Skalar</a></li>
<li><a href="/docs/id/milvus_for_agents.md">Milvus untuk Agen AI</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Menyebarkan</p>
<ul>
<li><a href="/docs/id/configure-docker.md">Konfigurasi Milvus</a></li>
<li><a href="/docs/id/deploy_s3.md">Kelola Ketergantungan</a></li>
<li><a href="/docs/id/eks.md">Menerapkan di Awan</a></li>
<li><a href="/docs/id/scaleout.md">Menetapkan Skala Cluster Milvus</a></li>
<li><a href="/docs/id/monitor_overview.md">Monitor dan Peringatan</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Pelajari</p>
<ul>
<li><a href="/docs/id/system_configuration.md">Konfigurasi Sistem</a></li>
<li><a href="/docs/id/architecture_overview.md">Gambaran Umum Arsitektur</a></li>
<li><a href="/docs/id/index-explained.md">Penjelasan Indeks</a></li>
<li><a href="/docs/id/metric.md">Metrik Kemiripan</a></li>
<li><a href="/docs/id/glossary.md">Daftar Istilah</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">Apa yang baru di dokumen<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>Mei 2026 - Pembaruan Milvus 3.0.x</em></p>
<ul>
<li>Menambahkan sorotan Milvus 3.0.x ke <a href="/docs/id/release_notes.md">Catatan Rilis</a>, termasuk Koleksi Eksternal, Snapshot, Storage V3, dan integrasi ekosistem danau.</li>
<li>Menambahkan panduan tentang cara <a href="/docs/id/single-vector-search.md#Sort-Search-Results-by-Scalar-Fields--Milvus-30x">mengurutkan hasil pencarian berdasarkan bidang skalar</a> dan <a href="/docs/id/get-and-scalar-query.md#Aggregate-Query-Results--Milvus-30x">hasil kueri agregat</a>.</li>
<li>Menambahkan panduan tentang cara menggunakan <a href="/docs/id/nullable-and-default.md">bidang vektor</a> yang <a href="/docs/id/nullable-and-default.md">dapat dinolkan</a> dan <a href="/docs/id/set-collection-ttl.md#Set-entity-level-TTL--Milvus-30x">TTL tingkat entitas</a>.</li>
<li>Menambahkan panduan tentang cara menggunakan <a href="/docs/id/minhash-function.md">Fungsi MinHash</a> untuk tanda tangan MinHash sisi server.</li>
<li>Menambahkan panduan tentang cara <a href="/docs/id/search-with-embedding-lists.md">mencari dengan daftar penyematan</a> dan memicu <a href="/docs/id/force-merge.md">pemadatan penggabungan paksa</a>.</li>
</ul>
</div>
